# sonic

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
archive/: readme.md
src/: auth.rs  backend.rs  daemon.rs  logging.rs  main.rs
