[package]
name = "sonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.10.0"
rspotify = {version = "0.11.7", features = ["env-file", "cli"] }
log = "0.4.20"
log4rs = "1.2.0"
