[package]
name = "sonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "*"
serde = "1.0"
serde_json = "1.0"
env_logger = "*"
rspotify = {version = "*", features = ["env-file", "cli"] }
log = "0.4.20"
log4rs = "1.2.0"
base64 = "0.22.1"
ring = "0.17.8"
rand = "0.8.5"
hyper = "1.3.1"
