[package]
name = "sonic"
version = "0.1.0"
edition = '2021'

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = "0.12.4"
env_logger = "0.11.3"
rspotify = {version = "0.13.1", features = ["env-file", "cli"] }
log = "0.4.21"
log4rs = "1.3.0"
webbrowser = "1.0.1"
warp = "0.3.7"
net2 = "0.2.39"
